Added profile summary to sidebar on user page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,8 @@
         </div>
 
         <div class="four columns">
-            <%= render partial: "shared/profile_quality_box", locals: {} %>
+            <%= render partial: "shared/sidebar_profile_summary", locals: { user: @user } %>
+            <%= render partial: "shared/profile_quality_box", locals: { user: @user } %>
         </div>
     </div>
 </div>
