--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,12 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Location ID</strong>
-  <%= @location.id %>
-</p>
-
-<p>
-  <strong>User:</strong>
+  <strong>Location User:</strong>
   <%= @location.user_id %> - <%= @location.user.name %>
 </p>
 
@@ -31,12 +26,12 @@
 </p>
 
 <p>
-  <strong>Lat:</strong>
+  <strong>lat:</strong>
   <%= @location.lat %>
 </p>
 
 <p>
-  <strong>Lon:</strong>
+  <strong>lon:</strong>
   <%= @location.lon %>
 </p>
 
