--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -51,6 +51,8 @@
   </div>
 <% end %>
 
+<%= link_to  "See / edit my locations", locations_path %>
+
 <h3>Cancel my account</h3>
 
 # We need to think about what we will do once a user cancels his account. (delete, flag as deleted, allow email to be re-used?)
