Export Locations too via rake export:seeds_format

--- a/app/views/ads/_slim_map_location.html.erb
+++ b/app/views/ads/_slim_map_location.html.erb
@@ -1,5 +1,5 @@
 <section class="slim-map-location">
-    <div class="slim-map-location__map" data-geolocation="59.93761,10.81748" data-controller="sideBarMap">
+    <div class="slim-map-location__map" data-geolocation="<%= ad.location.lat %>,<%= ad.location.lon %>" data-controller="sideBarMap">
 
     <div>
 </section>
