--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Plendit</title>
-  <%= favicon_link_tag       'favicon-32x32.png' %>
+  <%= favicon_link_tag       'logos/favicon_raw.png' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag    '//fonts.googleapis.com/css?family=Raleway:400,300,600' %>
 
