--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -371,6 +371,11 @@ form {
 .u-pull-left {
   float: left; }
 
+/* standard class for spacing things vertically */
+.u-push-down {
+  margin-top: 12px;
+}
+
 @media (min-width: 550px) {
   .u-hidden-when-grid {
     display: none;
