--- a/app/views/users/requests.html.erb
+++ b/app/views/users/requests.html.erb
@@ -1,18 +1,10 @@
-<%= render partial: "personal_bar" %>
-
+<%= render partial: "personal_bar", locals: { selected: "Dine forespørsler" } %>
 
 <div class="container">
     <div class="row">
         <div class="eight columns">
 
-            <div class="gray-box">
-                <h5 class="gray-box__title">Nye forespørsler</h5>
-                <div class="gray-box__body">
-                    Under ser du nye forespørsler. Om du ser etter
-                    leiehistorikk, finner du denne ved å
-                    <a href="#">klikke her</a>
-                </div>
-            </div>
+            <%= render partial: "new_requests_header_box", layout: "gray_box", locals: { title: "Nye forespørsler" } %>
 
         </div>
         <div class="four columns">
