--- a/app/views/shared/_slim_promoted_ad.html.erb
+++ b/app/views/shared/_slim_promoted_ad.html.erb
@@ -4,7 +4,7 @@
     <h6 class="slim-promoted-ad__title"><%= link_to ad.title, ad %></h6>
 
     <p class="slim-promoted-ad__body">
-        <%= ad.short_description %>
+        <%= ad.body[0..200] %>
     </p>
 
     <button class="slim-promoted-ad__button">
