--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -12,7 +12,7 @@
         <% end %>
     </div>
     <div>
-        <%= link_to 'Lei ut tingene dine her', new1_ad_path, {:class => 'front-search-block__new-ad-button button-primary'} %>
+        <%= link_to 'Lei ut tingene dine her', new_ad_path, {:class => 'front-search-block__new-ad-button button-primary'} %>
     </div>
 
 </section>
