--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,43 +1,96 @@
 <%= form_for(@ad) do |f| %>
-  <% if @ad.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
+    <% if @ad.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
 
-      <ul>
-      <% @ad.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @ad.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <h1>Legg ut annonse</h1>
+    <p>
+        Legg ut en annonse og tjen penger. Det tar mindre enn ett minutt!
+        <a class="u-hidden-when-grid" href="#ad-input-info">Les mer</a>
+    </p>
+
+
+    <div class="input-progress"><div class="input-progress__step input-progress__step--current"><strong>Detaljer</strong></div><div class="input-progress__step"><strong>Bilder</strong></div><div class="input-progress__step"><strong>Publiser</strong></div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%#= f.number_field :user_id %>
-    <%# NOTE: Non-scalable, test only: %>
-    <%= f.collection_select(:user_id, User.all, :id, :name) %>
-  </div>
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :short_description %><br>
-    <%= f.text_field :short_description %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :tags %><br>
-    <%= f.text_area :tags %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+    <div class="row">
+        <div class="nine columns">
+            <label>Overskrift:</label>
+            <%= f.text_field :title, class: 'u-full-width' %>
+
+            <div class="row">
+                <div class="six columns">
+                    <label>Pris pr time: || Pris per dag: || Pris per uke: </label>
+                    <%= f.text_field :price, class: 'u-full-width', data: {:controller => "syncPayout"} %>
+                </div>
+                <div class="six columns">
+                    <label>Utbetales til deg:</label>
+                    <input type="text" class="u-full-width" data-payout>
+                </div>
+            </div>
+
+            <label>
+              <input type="checkbox">
+              <span><small>
+                <%#= f.check_box :require_insurance %> Ja, leietaker må tegne forsikring for å leie objektet.
+              </small></span>
+            </label>
+
+            <label>
+              <div>
+                <span><small> Adresse for henting: </small></span>
+              </div>
+              <%- if @ad.user.locations.length > 0 -%>
+              <div>
+                <input type="checkbox">
+                <span><small>
+                    <%#= f.check_box :require_insurance %> Bruk en av mine registrert adresser:
+                </small></span>
+              </div>
+              <div>
+                <%= select( :ad, :location_id, @ad.user.locations.map{ |l| ["#{l.address_line} - #{l.city} - #{l.post_code}", l.id] } ) %>
+              </div>
+              <%- end -%>
+            </label>
+
+
+            <input type="text" class="u-full-width" placeholder="gateadresse">
+
+            <div class="row">
+                <div class="four columns">
+                    <input type="text" class="u-full-width" placeholder="By">
+                </div>
+                <div class="four columns">
+                    <input type="text" class="u-full-width" placeholder="Fylke">
+                </div>
+                <div class="four columns">
+                    <input type="text" class="u-full-width" placeholder="Postnummer">
+                </div>
+            </div>
+
+            <p>
+                Fyll ut så mange felt som mulig og vær så nøyaktig som du kan.
+            </p>
+
+            <div> map placeholder </div>
+            </div>
+        </div>
+
+        <div>
+            <label>Beskrivelse</label>
+            <%= f.text_area :body, class: 'u-full-width'  %>
+
+            <div> tags placeholder: <%= f.text_area :tags, class: 'u-full-width' %> </div>
+
+            <%= f.submit 'Neste steg', class: 'u-pull-right' %>
+            <!-- a class="u-pull-right" href="#">Neste steg</a -->
+        </div>
+    <%- end -%>
