--- a/app/views/ads/_booking_request_form.html.erb
+++ b/app/views/ads/_booking_request_form.html.erb
@@ -3,7 +3,7 @@
 
 <div class="booking-request-form">
 
-    <h3 class="booking-request-form__title">xyz,- per dag</h3>
+    <h3 class="booking-request-form__title"><%= @ad.price %> per dag</h3>
 
     <div class="row">
 
