Added code to supress footer, for pages where it should not be shown

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
 
 <%= yield %>
 
+<% if not @supress_footer %>
 <footer>
     <%= render partial: "main_footer" %>
 </footer>
+<% end %>
 </body>
 </html>
