Moved personal bar partial to shared views

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
-<%= render partial: "personal_bar" %>
-
+<%= render partial: "shared/personal_bar" %>
 
 <div class="container">
     <div class="row">
