--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -8,6 +8,7 @@ $color-plendit-blue: #2a96ff;
 $color-box-border: #9b9b9b;
 
 $color-gray-background: #d4d4d4; // rgb(212,212,212);
+$color-subtle-gray-background: #dee1df;
 
 $color-approve: #36b984;
 $color-edit: #8f8989;
