--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,39 +1,37 @@
-<h1>Listing Bookings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Ad item</th>
-      <td>Ad Owner*</td>
-      <th>Requester user</th>
-      <th>Booking status</th>
-      <th>Price</th>
-      <th>Booking from</th>
-      <th>Booking to</th>
-      <th>First reply at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= render partial: "shared/personal_bar", locals: { selected: "Dine forespørsler" } %>
 
-  <tbody>
-    <% @bookings.each do |booking| %>
-      <tr>
-        <td><%= booking.ad_item_id %> [<small><%= booking.ad.title %></small>]</td>
-        <td>[<small><%= booking.ad.user.name %></small>] </td>
-        <td><%= booking.from_user_id %> [<small><%= booking.from_user.name %></small>]</td>
-        <td><%= booking.booking_status_id %> [<small><%= booking.booking_status.status %></small>]</td>
-        <td><%= booking.price %></td>
-        <td><%= booking.booking_from %></td>
-        <td><%= booking.booking_to %></td>
-        <td><%= booking.first_reply_at %></td>
-        <td><%= link_to 'Show', booking %></td>
-        <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
-        <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container">
+    <div class="row">
+        <div class="eight columns">
+            <%= render layout: "gray_box", locals: {title: "Nye forespørsler"} do %>
+                Under ser du nye forespørsler. Om du ser etter din historikk
+                finner du denne ved å <a href="#">klikke her.</a>
+            <% end %>
 
-<br>
+            <section class="u-push-down">
+                <%= render partial: "incoming_request_item", collection: @bookings, as: 'booking' %>
+            </section>
 
-<%= link_to 'New Booking', new_booking_path %>
+        </div>
+        <div class="four columns">
+            <%= render layout: "gray_box", locals: {title: "Sendte forespørsler"} do %>
+                <ul>
+                    <li><a href="#">Thule bla bla</a></li>
+                    <li><a href="#">Fjellheimen bla bla</a></li>
+                </ul>
+                <hr>
+                <a href="#">Vis alle</a>
+            <% end %>
+
+            <%= render layout: "gray_box", locals: {title: "Motatte forespørsler"} do %>
+                <ul>
+                    <li><a href="#">Thule bla bla</a></li>
+                    <li><a href="#">Fjellheimen bla bla</a></li>
+                </ul>
+                <hr>
+                <a href="#">Vis alle</a>
+            <% end %>
+        </div>
+    </div>
+</div>
