Moved profile image box into partial

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,12 +41,7 @@
                 </div>
             </div>
 
-            <div class="profile-image-box">
-                <%= render('shared/avatar.html', user: User.find(session["warden.user.user.key"][0][0]), size: "huge" ) %>
-                <p>
-                    <a href="#">Endre profilbilde</a>
-                </p>
-           </div>
+            <%= render('shared/profile_image_box.html', user: current_user, size: "huge") %>
 
         </div>
     </div>
