--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -9,9 +9,42 @@
                 det bare er ditt fornavn som vises til andre brukere.
             <% end %>
 
-            <section class="u-push-down">
-                profil
-            </section>
+
+            <%= render layout: "gray_box", locals: {title: "Rediger profil"} do %>
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+
+                    <%= devise_error_messages! %>
+
+                    <div class="row">
+                        <div class="six columns">
+                            <%= f.label :name, "Navn" %>
+                            <%= f.text_field :name, class: "u-full-width" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="six columns">
+                            <%= f.label :email, "E-post" %>
+                            <%= f.text_field :email, class: "u-full-width" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="six columns">
+                            <%= f.label :phone_number, "Telefonnummer" %>
+                            <%= f.text_field :phone_number, class: "u-full-width" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="twelve columns">
+                            <%= f.submit "Oppdater", class: "u-pull-right button-primary" %>
+                        </div>
+                    </div>
+
+                <% end %>
+
+            <% end %>
 
         </div>
         <div class="four columns">
@@ -29,6 +62,7 @@
     </div>
 </div>
 
+<!--
 
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -60,7 +94,7 @@
   </div>
 
   <%# if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <!-- <div>Currently waiting confirmation for: <%#= resource.unconfirmed_phone_number %></div> -->
+     <div>Currently waiting confirmation for: <%#= resource.unconfirmed_phone_number %></div> 
   <%# end %>
 
   <div class="field">
@@ -89,5 +123,5 @@
 
 # We need to think about what we will do once a user cancels his account. (delete, flag as deleted, allow email to be re-used?)
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
+-->
 <%= link_to "Back", :back %>
