--- a/app/views/ads/_owned_ad_item.html.erb
+++ b/app/views/ads/_owned_ad_item.html.erb
@@ -4,5 +4,5 @@
         <%= image_tag "ads/ad1/ad_image_1.jpg", alt: "", size: "160x100", class: "u-pull-right" %>
         <%= ad.summary %>
     </p>
-    <p><%= ad.updated_at %> STATUS</p>
+    <p><%= ad.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS</p>
 </div>
