Added password fields to profile form

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -37,6 +37,25 @@
                     </div>
 
                     <div class="row">
+                        <div class="six columns">
+                            <%= f.label :password, "Nytt passord" %> (blankt for å beholde nåværende passord)
+                            <%= f.password_field :password, autocomplete: "off", class: "u-full-width" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="three columns">
+                            <%= f.label :password_confirmation, "Passord" %>
+                            <%= f.password_field :password_confirmation, autocomplete: "off", class: "u-full-width" %>
+                        </div>
+
+                        <div class="three columns">
+                            <%= f.label :current_password, "Bekreft passord" %>
+                            <%= f.password_field :current_password, autocomplete: "off", class: "u-full-width" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
                         <div class="twelve columns">
                             <%= f.submit "Oppdater", class: "u-pull-right button-primary" %>
                         </div>
