Added utility class for hiding stuff

--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -376,6 +376,10 @@ form {
   margin-top: 12px;
 }
 
+.u-hidden {
+  display: none;
+}
+
 @media (min-width: 550px) {
   .u-hidden-when-grid {
     display: none;
