Minor styling fix for result page

--- a/app/assets/stylesheets/_search_filter_section.scss
+++ b/app/assets/stylesheets/_search_filter_section.scss
@@ -48,7 +48,7 @@
 
     &__map-box {
         position: absolute;
-        width: 65.3333333333%;
+        width: 65.1%;
         top: 0;
         bottom: 0;
     }
