--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -52,7 +52,7 @@
                     </div>
                 </div>
 
-                <div class="row search-filter-section__row">
+                <div class="row">
                     <div class="two columns">
                         <%= label_tag(:tags, "Tags:") %>
                     </div>
