Better looking search title

--- a/app/assets/stylesheets/_search_filter_section.scss
+++ b/app/assets/stylesheets/_search_filter_section.scss
@@ -41,6 +41,15 @@
     }
 }
 
+.search-title-box {
+    padding: $standard-spacing / 4;
+
+    &__title {
+        margin: 0;
+    }
+
+}
+
 .result-container {
     height: 300px;
     overflow: hidden;
