--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-    <h4><%= @ads.count %> treff for <i><%= @term %></i></h4>
+<div class="container search-title-box">
+    <h4 class="search-title-box__title"><%= @ads.count %> treff for <i><%= @term %></i></h4>
 </div>
 
 <div class="search-filter-section">
