--- a/app/views/ads/_ad_gallery_box.html.erb
+++ b/app/views/ads/_ad_gallery_box.html.erb
@@ -1,3 +1,6 @@
 <div class="gallery-box">
     Gallery placeholder
+    <% @ad.ad_images.each do |ad_image| %>
+    <%= image_tag ad_image.image.url(:mediumplus) %>
+    <% end %>
 </div>
