--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -1,7 +1,7 @@
 <div class="search-result-item">
     <%= link_to ad, class: "search-result-item__link" do %>
         <div class="search-result-item__image-holder">
-            <%= image_tag "ads/ad1/ad_image_1.jpg", alt: "", class: "search-result-item__image" %>
+            <%= image_tag ad.image_url_with_fallback(:medium), alt: "", class: "search-result-item__image" %>
         </div>
     <% end %>
     <%= link_to ad, class: "search-result-item__link" do %>
