--- a/app/views/ad_images/index.html.erb
+++ b/app/views/ad_images/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>id</th>
       <th>Ad id</th>
       <th>Weight</th>
       <th>Thumbnail</th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @ad_images.each do |ad_image| %>
       <tr>
+        <td><%= ad_image.id %></td>
         <td><%= ad_image.ad_id %></td>
         <td><%= ad_image.weight %></td>
         <td><%= image_tag ad_image.image.url(:thumb) %></td>
