- Added image slider thingy - Hooked up ad page with placeholder images

--- a/app/assets/stylesheets/_ad_gallery_box.scss
+++ b/app/assets/stylesheets/_ad_gallery_box.scss
@@ -1,7 +1,18 @@
 @import 'constants.scss';
 
 .gallery-box {
-    border: solid thin black;
-    margin-top: $standard-spacing;
-    padding-top: 100px;
+    &__main-image {
+        border: solid thin $color-box-border;
+    }
+
+    &__thumbnails {
+        text-align: center;
+        padding: $standard-spacing;
+    }
+
+    &__thumbnail {
+        margin: 0 ($standard-spacing / 3) 0 ($standard-spacing / 3);
+        border-radius: 50%;
+    }
+
 }
