--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,3 +1,46 @@
+<%= render partial: "shared/personal_bar", locals: { selected: "Dine forespørsler" } %>
+
+<div class="container">
+    <div class="row">
+
+        <div class="nine columns">
+
+            <h3 class="u-push-down">Din forespørsel til <%= @booking.from_user.name %>.</h3>
+
+            <%= render partial: "rental_request_box_renter", locals: {booking: @booking} %>
+
+            <h3 class="u-push-down"><%= @booking.from_user.name %> ønsker å leie av deg</h3>
+
+            <%= render partial: "rental_request_box_owner", locals: {booking: @booking} %>
+
+        </div>
+        <div class="three columns">
+<!--             Fixme: this box, and the one below, should be in separate partials
+            since they are reused I guess?
+ -->
+            <%= render layout: "gray_box", locals: {title: "Sendte forespørsler"} do %>
+                <ul>
+                    <li><a href="#">Thule bla bla</a></li>
+                    <li><a href="#">Fjellheimen pulk med stor lastekapasitet</a></li>
+                </ul>
+                <hr>
+                <a href="#">Vis alle</a>
+            <% end %>
+
+            <%= render layout: "gray_box", locals: {title: "Motatte forespørsler"} do %>
+                <ul>
+                    <li><a href="#">Thule bla bla</a></li>
+                    <li><a href="#">Fjellheimen bla bla</a></li>
+                </ul>
+                <hr>
+                <a href="#">Vis alle</a>
+            <% end %>
+        </div>
+    </div>
+</div>
+
+
+
 <p>
   <strong>Ad item:</strong>
   <%= @booking.ad_item_id %> - <%= @booking.ad.title %>
