BUGFIX: AdImage: use correct json callback url

--- a/app/views/ad_images/_form_ajax_test3.html.erb
+++ b/app/views/ad_images/_form_ajax_test3.html.erb
@@ -1,3 +1,9 @@
+
+
+<%= javascript_tag do %>
+  window.ad_images_json_url = "<%= j ad_images_path(:ad_id => params[:ad_id], :format => :json) %>";
+<% end %>
+
 <%= form_for(AdImage.new, html: { multipart: true, class: "dropzone image-upload-box"}) do |f|  %>
 
   <img src="/images/camera_icon.png">
