Add preview/publish step when adding an Ad

--- a/app/views/ad_images/_form_ajax_test3.html.erb
+++ b/app/views/ad_images/_form_ajax_test3.html.erb
@@ -51,7 +51,7 @@
 <% end %>
 
 <div class="next-step-holder">
-    <a href="./input_step_3.html" class="next-step">Neste steg</a>
+    <a href="<%= preview_ad_path(id: params[:ad_id]) %>" class="next-step">Neste steg</a>
 </div>
 
 
