Better names for button constants

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -10,11 +10,9 @@ $color-box-border: #9b9b9b;
 $color-gray-background: #d4d4d4; // rgb(212,212,212);
 $color-subtle-gray-background: #dee1df;
 
-$color-approve: #36b984;
-$color-edit: #8f8989;
-$color-reject: #c20400;
-
-
+$color-button-good: #36b984;
+$color-button-bad: #c20400;
+$color-button-neutral: #8f8989;
 
 
 @mixin buttonish() {
