Added reject/edit/accept buttons

--- a/app/views/bookings/_rental_request_box.html.erb
+++ b/app/views/bookings/_rental_request_box.html.erb
@@ -24,7 +24,7 @@
         <tr>
             <th class="rental-request-box__th">Leveres</th>
             <td class="rental-request-box__td">
-                <%= booking.booking_from.to_formatted_s(:plendit_short_datetime) %>
+                <%= booking.booking_to.to_formatted_s(:plendit_short_datetime) %>
             </td>
         </tr>
 
