--- a/app/views/bookings/_rental_request_box_owner.html.erb
+++ b/app/views/bookings/_rental_request_box_owner.html.erb
@@ -1,1 +1,15 @@
 <%= render partial: "rental_request_box", locals: {booking: @booking, is_owner: true} %>
+
+<div class="rental-request-buttons">
+    <button class="rental-request-buttons__button rental-request-buttons__button--good">
+        <%= image_tag("offer_accept.png", size: "25x25") %>
+        <br>
+        Aksepter
+    </button>
+    <button class="rental-request-buttons__button rental-request-buttons__button--bad">
+        <%= image_tag("offer_reject.png", size: "25x25") %>
+        <br>
+        Avvis
+    </button>
+</div>
+
