--- a/app/views/bookings/_rental_request_box_renter.html.erb
+++ b/app/views/bookings/_rental_request_box_renter.html.erb
@@ -1,1 +1,15 @@
 <%= render partial: "rental_request_box", locals: {booking: @booking, is_owner: false} %>
+
+<div class="rental-request-buttons">
+    <button class="rental-request-buttons__button rental-request-buttons__button--bad">
+        <%= image_tag("offer_reject.png", size: "25x25") %>
+        <br>
+        Avbryt
+    </button>
+    <button class="rental-request-buttons__button rental-request-buttons__button--neutral">
+        <%= image_tag("offer_edit.png", size: "25x25") %>
+        <br>
+        Rediger
+    </button>
+</div>
+
